deploy/k8s/demo/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: code-agent-envoy
  namespace: demo
  labels:
    app.kubernetes.io/name: code-agent
    app.kubernetes.io/part-of: airlock
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: airlock_egress
          address:
            socket_address:
              address: 127.0.0.1
              port_value: 10000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: airlock_egress
                    route_config:
                      name: airlock_egress_route
                      virtual_hosts:
                        - name: demo
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: echo_upstream
                    http_filters:
                      - name: envoy.filters.http.ext_proc
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                          failure_mode_allow: false
                          grpc_service:
                            envoy_grpc:
                              cluster_name: airlock_ext_proc
                            timeout: 2s
                          processing_mode:
                            request_header_mode: SEND
                            response_header_mode: SKIP
                            request_body_mode: NONE
                            response_body_mode: NONE
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: airlock_ext_proc
          type: STRICT_DNS
          connect_timeout: 1s
          http2_protocol_options: {}
          load_assignment:
            cluster_name: airlock_ext_proc
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 50051
        - name: echo_upstream
          type: STRICT_DNS
          dns_lookup_family: V4_ONLY
          connect_timeout: 1s
          load_assignment:
            cluster_name: echo_upstream
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: echo-upstream.demo.svc.cluster.local
                          port_value: 8080
    admin:
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9901
